--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,22 @@
   --success-color: #28a745;
 }
 
+.item-enter{
+  opacity: 0;
+}
+.item-enter-active{
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit{
+  opacity: 1;
+}
+.item-exit-active{
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
