--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,6 +64,13 @@ img {
   padding: 0 2rem;
 }
 
+.form-container{
+  max-width: 640px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
+
 /* Text Styles*/
 .x-large {
   font-size: 4rem;
